--- a/01/index.html
+++ b/01/index.html
@@ -17,7 +17,7 @@
         <input type="email" name="email" id="email" class="form__input" placeholder="email" />
         <textarea name="question" id="question" class="form__input form__input--textarea"
             placeholder="question"></textarea>
-        <button id="submit" name="submit" type="submit" class="btn">Wyślij</button>
+        <button id="submit" name="submit" type="submit" class="form__btn">Wyślij</button>
     </form>
     <script src="./app.js"></script>
 </body>
